--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SIKAI PENG</title>
-  <link rel="shortcut icon" href="//avatars.githubusercontent.com/u/127246594?s=120&v=4">
+  <link rel="shortcut icon" href="//avatars.githubusercontent.com/u/127246594?v=4">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Rubik:300,500,700">
   <style type="text/css">
     * {
